added different greys and new string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="btnDot">.</string>
     <string name="btnMultiply">*</string>
     <string name="btnResult">=</string>
+    <string name="equationPrev">Equation Will Appear Here</string>
+
 </resources>
