formatting is complete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
     <string name="hexConversion">Hex Conversion</string>
     <string name="octalConversion">Octal Conversion</string>
 
+    <string name="calculator">Calculator</string>
+
 </resources>
