--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="btnDot">.</string>
     <string name="btnMultiply">*</string>
     <string name="btnResult">=</string>
-    <string name="baseConverter">Convert Base</string>
+    <string name="baseConverter">Go to Base Converter</string>
 
     <string name="baseConverterTitle">Base Converter</string>
     <string name="inputBase">Select Base of Input</string>
@@ -34,6 +34,6 @@
     <string name="hexConversion">Hex Conversion</string>
     <string name="octalConversion">Octal Conversion</string>
 
-    <string name="calculator">Calculator</string>
+    <string name="calculator">Go to Calculator</string>
 
 </resources>
